--- a/index.html
+++ b/index.html
@@ -33,12 +33,6 @@
         <script src="static/js/leaflet.js"></script>
         <script src="static/js/jquery-1.8.3.min.js"></script>
         <script src="static/js/jquery.mobile-1.3.1.min.js"></script>
-        <script>
-          var map = L.map('map').setView([60.187148,24.816375], 13);
-          L.tileLayer('http://{s}.tile.cloudmade.com/dde3e76809d54a2fb29ac08bbc08335a/998/256/{z}/{x}/{y}.png', {
-            attribution: 'Map data &copy; 2011 OpenStreetMap contributors, Imagery &copy; 2012 CloudMade'
-          }).addTo(map);
-          var marker = L.marker([60.187148, 24.816375]).addTo(map);
-        </script>
+        <script src="static/js/client.js"></script>
     </body>
 </html>
