--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Navigator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        <link rel="stylesheet" href="static/css/leaflet.css" />
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
         <link rel="stylesheet" href="static/css/jquery.mobile-1.3.1.min.css" />
         <style>
             /* Hide all the app pages until jQuery Mobile inits to
@@ -30,8 +30,8 @@
     </head>
     <body>
         <div id="map" style="width: 100%; height: 800px; border: 0;"></div>
-        <script src="static/js/leaflet.js"></script>
         <script src="static/js/jquery-1.8.3.min.js"></script>
+        <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
         <script src="static/js/jquery.mobile-1.3.1.min.js"></script>
         <script src="static/js/client.js"></script>
     </body>
